# saherator-1.0

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: documentation.md
include/: attacks.h  board.h  eval.h  movegen.h  perft.h  search.h  tests.h  timeman.h  uci.h  utils.h
src/: attacks.cpp  board.cpp  eval.cpp  main.cpp  movegen.cpp  perft.cpp  search.cpp  timeman.cpp  uci.cpp
tests/: perft_diff.py
